deployment.yaml
apiVersion : apps/v1
kind: Deployment
metadata:
  name: my-web-deployment
  labels:
    app : my-k8s-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      project: kgb
  template:
    metadata:
      labels:
        project: kgb   # Service will look for those PODS Labels!!!
    spec:
      containers:
        - name : kgb-web
          image: my01
          ports:
            - containerPort: 80

---
apiVersion: v1
kind: Service
metadata:
  name: my-single-pod-service
spec:
  selector:
    app : my-k8s-deployment
    project: kgb    # Selecting PODS with those Labels
  ports:
    - protocol: TCP
      port      : 80  # Port on Load Balancer
      targetPort: 80  # Port on POD
